News UAT/force-app/main/default/objects/SurveyTaker__c/fields/Call_Agent__c.field-meta.xml
<CustomField>
    <fullName>Call_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Surveys_Taken_CallAgent</relationshipName>
    <type>Lookup</type>
</CustomField>