News UAT/force-app/main/default/objects/SurveyTaker__c/fields/Final_Score__c.field-meta.xml
<CustomField>
    <fullName>Final_Score__c</fullName>
    <formula>IF(
TotalNoCompliance__c &gt; 0,
0,
IF(Total_Score__c + TotalBonusScore__c &gt; (Max_Score__c - TotalNotApplicable__c), 
1,
(Total_Score__c+TotalBonusScore__c)/(Max_Score__c - TotalNotApplicable__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>