News UAT/force-app/main/default/objects/SurveyTaker__c/fields/Max_Score__c.field-meta.xml
<CustomField>
    <fullName>Max_Score__c</fullName>
    <formula>Survey__r.Max_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>