News UAT/force-app/main/default/objects/SurveyTaker__c/fields/MaxBonus__c.field-meta.xml
<CustomField>
    <fullName>MaxBonus__c</fullName>
    <formula>Survey__r.MaxBonusScore__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Bonus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>