News UAT/force-app/main/default/objects/SurveyTaker__c/fields/SurveyRecordType__c.field-meta.xml
<CustomField>
    <fullName>SurveyRecordType__c</fullName>
    <formula>Survey__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Record Type</label>
    <type>Text</type>
</CustomField>