News UAT/force-app/main/default/objects/SurveyTaker__c/fields/TaskId__c.field-meta.xml
<CustomField>
    <fullName>TaskId__c</fullName>
    <label>Task Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>