News UAT/force-app/main/default/objects/SurveyTaker__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <label>Total Score</label>
    <summarizedField>SurveyQuestionResponse__c.Response_Weight__c</summarizedField>
    <summaryFilterItems>
        <field>SurveyQuestionResponse__c.SurveySection__c</field>
        <operation>notEqual</operation>
        <value>BONUS POINTS</value>
    </summaryFilterItems>
    <summaryForeignKey>SurveyQuestionResponse__c.SurveyTaker__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>