News UAT/force-app/main/default/objects/SurveyTaker__c/fields/TotalNoCompliance__c.field-meta.xml
<CustomField>
    <fullName>TotalNoCompliance__c</fullName>
    <label>Total Compliance Questions Failed</label>
    <summaryFilterItems>
        <field>SurveyQuestionResponse__c.Compliance_Question__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SurveyQuestionResponse__c.FailedCompliance__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SurveyQuestionResponse__c.SurveyTaker__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>