News UAT/force-app/main/default/objects/SurveyTaker__c/fields/TotalNotApplicable__c.field-meta.xml
<CustomField>
    <fullName>TotalNotApplicable__c</fullName>
    <label>Total Not Applicable</label>
    <summarizedField>SurveyQuestionResponse__c.Max_Weight__c</summarizedField>
    <summaryFilterItems>
        <field>SurveyQuestionResponse__c.SurveySection__c</field>
        <operation>notEqual</operation>
        <value>BONUS POINTS</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SurveyQuestionResponse__c.NotApplicable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SurveyQuestionResponse__c.SurveyTaker__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>