News UAT/force-app/main/default/objects/SurveyTaker__c/listViews/All_Agent_Survey_Responses.listView-meta.xml
<ListView>
    <fullName>All_Agent_Survey_Responses</fullName>
    <columns>NAME</columns>
    <columns>Final_Score__c</columns>
    <columns>Survey__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SurveyRecordType__c</field>
        <operation>equals</operation>
        <value>Agent Survey</value>
    </filters>
    <label>All Agent Survey Responses</label>
</ListView>